import "goby/protobuf/option_extensions.proto";

package goby.util.protobuf;

message GLogConfig
{
  enum Verbosity
  {
    QUIET = 1;
    WARN = 2;
    VERBOSE = 3;
    GUI = 4;
    DEBUG1 = 5;
    DEBUG2 = 6;
    DEBUG3 = 7;
  }
  
  optional Verbosity tty_verbosity = 1 [default = QUIET,
                                        (goby.field).description="Terminal verbosity"];

  message FileLog
  {
    required string file_name = 1;
    optional Verbosity verbosity = 2 [default = VERBOSE,
                                      (goby.field).description="Verbosity for this file log"];
  }
  repeated FileLog file_log = 2 [(goby.field).description="Open one or more files for (debug) logging"];
  
}
